--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,3 +1,6 @@
+/*===============================
+COLORS
+===============================*/
 /* line 364, ../bower_components/foundation/scss/foundation/components/_global.scss */
 meta.foundation-version {
   font-family: "/5.5.2/";
@@ -84,7 +87,7 @@ html {
 /* line 434, ../bower_components/foundation/scss/foundation/components/_global.scss */
 html,
 body {
-  font-size: 100%;
+  font-size: 16px;
 }
 
 /* line 438, ../bower_components/foundation/scss/foundation/components/_global.scss */
@@ -95,7 +98,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
-  line-height: 1.5;
+  line-height: 24px;
   margin: 0;
   padding: 0;
   position: relative;
@@ -1681,4 +1684,279 @@ select {
     right: 91.66667%;
     left: auto;
   }
+}
+/*======================================
+COMPONENTS
+======================================*/
+/*=== Buttons ===*/
+/* line 51, ../scss/app.scss */
+a.primary_button {
+  display: inline-block;
+  background-color: #000;
+  text-decoration: none;
+  padding: 10px 50px;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+/*======================================
+HEADER
+======================================*/
+/* line 64, ../scss/app.scss */
+.header_container {
+  display: block;
+  position: fixed;
+  top: 0;
+  z-index: 99;
+  text-align: center;
+  width: 100%;
+  background-color: transparent;
+}
+/* line 73, ../scss/app.scss */
+.header_container h1 {
+  color: #f5f6f7;
+}
+
+/*======================================
+CHOOSE YOUR ACT
+======================================*/
+/* line 82, ../scss/app.scss */
+video#bgvid {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background-size: cover;
+}
+
+/* line 96, ../scss/app.scss */
+.intro_container {
+  display: block;
+  position: absolute;
+  top: 30%;
+  width: 100%;
+  text-align: center;
+  padding: 0px 200px;
+  z-index: 99;
+}
+/* line 105, ../scss/app.scss */
+.intro_container h1 {
+  color: #000000;
+}
+/* line 109, ../scss/app.scss */
+.intro_container p {
+  font-size: 30px;
+  line-height: 38px;
+  color: #f5f6f7;
+}
+
+/* line 116, ../scss/app.scss */
+.intros {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: block;
+  height: 100%;
+}
+/* line 123, ../scss/app.scss */
+.intros .intro_left {
+  width: 50%;
+  left: 0;
+  height: 100%;
+  position: absolute;
+}
+/* line 129, ../scss/app.scss */
+.intros .intro_left:before {
+  content: "";
+  position: absolute;
+  background: rgba(68, 135, 199, 0.4);
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+/* line 134, ../scss/app.scss */
+.intros .intro_right {
+  width: 50%;
+  right: 0;
+  height: 100%;
+  position: absolute;
+}
+/* line 140, ../scss/app.scss */
+.intros .intro_right:before {
+  content: "";
+  position: absolute;
+  background: rgba(235, 93, 75, 0.4);
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+/*======================================
+CHOOSE YOUR STORY
+======================================*/
+/* line 150, ../scss/app.scss */
+.cys_split_container {
+  position: relative;
+  overflow-x: hidden;
+  min-height: 100%;
+  width: 100%;
+}
+
+/* line 157, ../scss/app.scss */
+.cys_side {
+  height: 100%;
+  position: fixed;
+  top: 0;
+  background-size: cover;
+  background-position: 60% 0;
+}
+/* line 164, ../scss/app.scss */
+.cys_side a {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+}
+/* line 174, ../scss/app.scss */
+.cys_side.cys_he_container {
+  width: 50%;
+  left: 0;
+}
+/* line 178, ../scss/app.scss */
+.cys_side.cys_he_container:before {
+  content: "";
+  position: absolute;
+  background: #4487c7;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  z-index: 99;
+}
+/* line 185, ../scss/app.scss */
+.cys_side.cys_she_container {
+  width: 50%;
+  right: 0;
+}
+/* line 189, ../scss/app.scss */
+.cys_side.cys_she_container:before {
+  content: "";
+  position: absolute;
+  background: #eb5d4b;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  z-index: 99;
+}
+
+/* line 199, ../scss/app.scss */
+.cys_he_container img, .cys_she_container img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+/* line 207, ../scss/app.scss */
+.cys_text_overlay {
+  position: absolute;
+  top: 40%;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  padding: 0px 50px;
+  z-index: 999;
+}
+/* line 216, ../scss/app.scss */
+.cys_text_overlay p {
+  position: relative;
+  top: 20px;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+/* line 225, ../scss/app.scss */
+.cys_he_container:hover:before {
+  content: "";
+  position: absolute;
+  background: rgba(68, 135, 199, 0.5);
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+/* line 229, ../scss/app.scss */
+.cys_he_container:hover .cys_text_overlay p {
+  top: 0px;
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+}
+
+/* line 236, ../scss/app.scss */
+.cys_she_container:hover:before {
+  content: "";
+  position: absolute;
+  background: rgba(235, 93, 75, 0.5);
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+/* line 239, ../scss/app.scss */
+.cys_she_container:hover .cys_text_overlay p {
+  top: 0px;
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+}
+
+/*=== Flexslider ===*/
+/* line 249, ../scss/app.scss */
+.cys_split_container .flexslider {
+  height: 100%;
+}
+/* line 253, ../scss/app.scss */
+.cys_split_container ul.slides {
+  margin: 0px;
+  left: 0;
+  position: absolute;
+  -webkit-margin-start: 0px;
+  -webkit-padding-start: 0px;
+  height: 100%;
+  width: 100%;
+}
+/* line 262, ../scss/app.scss */
+.cys_split_container ul.slides li {
+  background-size: cover !important;
+  height: 100%;
 }
