--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1854,40 +1854,96 @@ select {
   }
 }
 /*======================================
-MENU
+HEADER
 ======================================*/
 /* line 53, ../scss/app.scss */
-.toggle_panel {
-  position: absolute;
-  width: 10%;
-  right: 0;
-  height: 100%;
-  background-color: #000;
+.header {
+  display: block;
+  position: fixed;
+  width: 100%;
+  z-index: 9999;
+  box-shadow: 0px 1px 5px #333333;
+}
+
+/* line 63, ../scss/app.scss */
+.he_toggled .she_said_header {
+  opacity: .5;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+/* line 68, ../scss/app.scss */
+.he_toggled .main_screen_container {
+  background-color: rgba(68, 135, 199, 0.5);
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+/* line 77, ../scss/app.scss */
+.she_toggled .he_said_header {
+  opacity: .5;
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+/* line 82, ../scss/app.scss */
+.she_toggled .main_screen_container {
+  background-color: rgba(235, 93, 75, 0.5);
+  -moz-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+/* line 89, ../scss/app.scss */
+.header h1 {
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 30px;
+}
+
+/* line 96, ../scss/app.scss */
+.he_said_header {
+  text-align: right;
+  background: #4487c7;
   cursor: pointer;
 }
-/* line 61, ../scss/app.scss */
-.toggle_panel h2 {
-  top: 40%;
-  position: relative;
-  width: 100%;
-  text-align: center;
-  color: #fff;
+
+/* line 102, ../scss/app.scss */
+.she_said_header {
+  text-align: left;
+  background: #eb5d4b;
+  cursor: pointer;
+}
+
+/* line 108, ../scss/app.scss */
+.he_said_header, .she_said_header {
+  display: block;
+  width: 50%;
+  float: left;
+  padding: 0px 20px;
 }
 
 /*======================================
 MAIN SCREEN
 ======================================*/
-/* line 74, ../scss/app.scss */
+/* line 119, ../scss/app.scss */
 .main_screen_container {
   display: block;
-  width: 90%;
+  top: 63px;
+  position: relative;
 }
 
 /*======================================
 COMPONENTS
 ======================================*/
 /*=== Buttons ===*/
-/* line 85, ../scss/app.scss */
+/* line 131, ../scss/app.scss */
 a.primary_button {
   display: inline-block;
   background-color: #000;
@@ -1897,10 +1953,15 @@ a.primary_button {
   text-transform: uppercase;
 }
 
+/* line 140, ../scss/app.scss */
+.hide {
+  display: none;
+}
+
 /*======================================
 HEADER
 ======================================*/
-/* line 98, ../scss/app.scss */
+/* line 148, ../scss/app.scss */
 .header_container {
   display: block;
   position: fixed;
@@ -1909,8 +1970,19 @@ HEADER
   text-align: center;
   width: 100%;
   background-color: transparent;
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  -webkit-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
 }
-/* line 107, ../scss/app.scss */
+/* line 159, ../scss/app.scss */
+.header_container.fadeOut {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+}
+/* line 163, ../scss/app.scss */
 .header_container h1 {
   color: #f5f6f7;
 }
@@ -1918,7 +1990,7 @@ HEADER
 /*======================================
 CHOOSE YOUR ACT
 ======================================*/
-/* line 116, ../scss/app.scss */
+/* line 172, ../scss/app.scss */
 video#cya_bgvid {
   position: fixed;
   top: 50%;
@@ -1934,7 +2006,7 @@ video#cya_bgvid {
   background-size: cover;
 }
 
-/* line 131, ../scss/app.scss */
+/* line 187, ../scss/app.scss */
 .intro_container {
   display: block;
   position: absolute;
@@ -1944,18 +2016,18 @@ video#cya_bgvid {
   padding: 0px 200px;
   z-index: 99;
 }
-/* line 140, ../scss/app.scss */
+/* line 196, ../scss/app.scss */
 .intro_container h1 {
   color: #000000;
 }
-/* line 144, ../scss/app.scss */
+/* line 200, ../scss/app.scss */
 .intro_container p {
   font-size: 30px;
   line-height: 38px;
   color: #f5f6f7;
 }
 
-/* line 151, ../scss/app.scss */
+/* line 207, ../scss/app.scss */
 .intros {
   position: fixed;
   top: 0;
@@ -1963,14 +2035,14 @@ video#cya_bgvid {
   display: block;
   height: 100%;
 }
-/* line 158, ../scss/app.scss */
+/* line 214, ../scss/app.scss */
 .intros .intro_left {
   width: 50%;
   left: 0;
   height: 100%;
   position: absolute;
 }
-/* line 164, ../scss/app.scss */
+/* line 220, ../scss/app.scss */
 .intros .intro_left:before {
   content: "";
   position: absolute;
@@ -1981,14 +2053,14 @@ video#cya_bgvid {
   height: 100%;
   display: block;
 }
-/* line 169, ../scss/app.scss */
+/* line 225, ../scss/app.scss */
 .intros .intro_right {
   width: 50%;
   right: 0;
   height: 100%;
   position: absolute;
 }
-/* line 175, ../scss/app.scss */
+/* line 231, ../scss/app.scss */
 .intros .intro_right:before {
   content: "";
   position: absolute;
@@ -2003,7 +2075,7 @@ video#cya_bgvid {
 /*======================================
 INTRO VIDEO
 ======================================*/
-/* line 185, ../scss/app.scss */
+/* line 241, ../scss/app.scss */
 .fullscreen-bg {
   position: fixed;
   top: 0;
@@ -2012,9 +2084,18 @@ INTRO VIDEO
   left: 0;
   overflow: hidden;
   z-index: -100;
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
-/* line 195, ../scss/app.scss */
+/* line 252, ../scss/app.scss */
+.fullscreen-bg.move_down_vid {
+  bottom: -100%;
+}
+
+/* line 256, ../scss/app.scss */
 #bgvid {
   position: absolute;
   top: 0;
@@ -2026,7 +2107,25 @@ INTRO VIDEO
 /*======================================
 CHOOSE YOUR STORY
 ======================================*/
-/* line 211, ../scss/app.scss */
+/* line 268, ../scss/app.scss */
+div#choose_your_story {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  transform: translateY(-100%);
+  -moz-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+
+/* line 277, ../scss/app.scss */
+div#choose_your_story.move_down {
+  transform: translateY(0%);
+}
+
+/* line 281, ../scss/app.scss */
 .cys_split_container {
   position: relative;
   overflow-x: hidden;
@@ -2034,15 +2133,19 @@ CHOOSE YOUR STORY
   width: 100%;
 }
 
-/* line 218, ../scss/app.scss */
+/* line 288, ../scss/app.scss */
 .cys_side {
   height: 100%;
   position: fixed;
   top: 0;
   background-size: cover;
   background-position: 60% 0;
+  -moz-transition: height 1s ease-in-out;
+  -o-transition: height 1s ease-in-out;
+  -webkit-transition: height 1s ease-in-out;
+  transition: height 1s ease-in-out;
 }
-/* line 225, ../scss/app.scss */
+/* line 296, ../scss/app.scss */
 .cys_side a {
   display: block;
   position: absolute;
@@ -2052,13 +2155,17 @@ CHOOSE YOUR STORY
   height: 100%;
   z-index: 9999;
 }
-/* line 235, ../scss/app.scss */
+/* line 306, ../scss/app.scss */
+.cys_side.header_transform {
+  height: 10%;
+}
+/* line 310, ../scss/app.scss */
 .cys_side.cys_he_container {
   width: 50%;
   left: 0;
   background-image: url("../img/he_intro.jpg");
 }
-/* line 240, ../scss/app.scss */
+/* line 315, ../scss/app.scss */
 .cys_side.cys_he_container:before {
   content: "";
   position: absolute;
@@ -2074,13 +2181,13 @@ CHOOSE YOUR STORY
   transition: all 0.5s ease-in-out;
   z-index: 99;
 }
-/* line 247, ../scss/app.scss */
+/* line 322, ../scss/app.scss */
 .cys_side.cys_she_container {
   width: 50%;
   right: 0;
   background-image: url("../img/she_intro.jpg");
 }
-/* line 252, ../scss/app.scss */
+/* line 327, ../scss/app.scss */
 .cys_side.cys_she_container:before {
   content: "";
   position: absolute;
@@ -2097,14 +2204,14 @@ CHOOSE YOUR STORY
   z-index: 99;
 }
 
-/* line 262, ../scss/app.scss */
+/* line 337, ../scss/app.scss */
 .cys_he_container img, .cys_she_container img {
   display: block;
   width: 100%;
   height: 100%;
 }
 
-/* line 270, ../scss/app.scss */
+/* line 345, ../scss/app.scss */
 .cys_text_overlay {
   position: absolute;
   top: 40%;
@@ -2114,7 +2221,7 @@ CHOOSE YOUR STORY
   padding: 0px 50px;
   z-index: 999;
 }
-/* line 279, ../scss/app.scss */
+/* line 354, ../scss/app.scss */
 .cys_text_overlay p {
   position: relative;
   top: 20px;
@@ -2126,7 +2233,7 @@ CHOOSE YOUR STORY
   transition: all 0.5s ease-in-out;
 }
 
-/* line 288, ../scss/app.scss */
+/* line 363, ../scss/app.scss */
 .cys_he_container:hover:before {
   content: "";
   position: absolute;
@@ -2137,14 +2244,14 @@ CHOOSE YOUR STORY
   height: 100%;
   display: block;
 }
-/* line 292, ../scss/app.scss */
+/* line 367, ../scss/app.scss */
 .cys_he_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 299, ../scss/app.scss */
+/* line 374, ../scss/app.scss */
 .cys_she_container:hover:before {
   content: "";
   position: absolute;
@@ -2155,7 +2262,7 @@ CHOOSE YOUR STORY
   height: 100%;
   display: block;
 }
-/* line 302, ../scss/app.scss */
+/* line 377, ../scss/app.scss */
 .cys_she_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
@@ -2163,11 +2270,11 @@ CHOOSE YOUR STORY
 }
 
 /*=== Flexslider ===*/
-/* line 312, ../scss/app.scss */
+/* line 387, ../scss/app.scss */
 .cys_split_container .flexslider {
   height: 100%;
 }
-/* line 316, ../scss/app.scss */
+/* line 391, ../scss/app.scss */
 .cys_split_container ul.slides {
   margin: 0px;
   left: 0;
@@ -2177,7 +2284,7 @@ CHOOSE YOUR STORY
   height: 100%;
   width: 100%;
 }
-/* line 325, ../scss/app.scss */
+/* line 400, ../scss/app.scss */
 .cys_split_container ul.slides li {
   background-size: cover !important;
   height: 100%;
