--- a/app/css/app.css
+++ b/app/css/app.css
@@ -31,14 +31,14 @@ MESSAGES
   border: 1px solid #eee;
   position: relative;
   transform: translate3d(0, 0, 0);
-  height: 600px;
 }
 
-/* line 36, ../scss/_messages.scss */
+/* line 35, ../scss/_messages.scss */
 #messagePane {
-  height: 100%;
-  max-height: 100%;
-  min-height: 100%;
+  box-sizing: border-box;
+  height: 100vh;
+  margin-bottom: -52px;
+  padding-bottom: 52px;
   overflow: auto;
 }
 
@@ -180,6 +180,13 @@ input[type="submit"] {
 input:focus {
   outline: none;
   box-shadow: none;
+}
+
+/* line 170, ../scss/_messages.scss */
+input[disabled] {
+  border-color: #eee;
+  color: #eee;
+  opacity: .5 !important;
 }
 
 /* line 364, ../bower_components/foundation/scss/foundation/components/_global.scss */
