--- a/app/scss/_messages.scss
+++ b/app/scss/_messages.scss
@@ -30,13 +30,13 @@ $msg-color: #1f96fb;
   border: 1px solid #eee;
   position: relative;
   transform: translate3d(0,0,0);
-  height: 600px;
 }
 
 #messagePane {
-  height: 100%;
-  max-height: 100%;
-  min-height: 100%;
+  box-sizing: border-box;
+  height: 100vh;
+  margin-bottom: -52px;
+  padding-bottom: 52px;
   overflow: auto;
 }
 
@@ -167,5 +167,9 @@ input:focus {
   box-shadow: none;
 }
 
-
+input[disabled] {
+  border-color: #eee;
+  color: #eee;
+  opacity: .5 !important;
+}
 
