--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2031,7 +2031,7 @@ video#cya_bgvid {
 }
 /* line 196, ../scss/app.scss */
 .intro_container h1 {
-  color: #000000;
+  color: #f5f6f7;
 }
 /* line 200, ../scss/app.scss */
 .intro_container p {
@@ -2233,8 +2233,12 @@ div#choose_your_story.move_down {
   text-align: center;
   padding: 0px 50px;
   z-index: 999;
+  -moz-transition: top 1s ease-in-out;
+  -o-transition: top 1s ease-in-out;
+  -webkit-transition: top 1s ease-in-out;
+  transition: top 1s ease-in-out;
 }
-/* line 354, ../scss/app.scss */
+/* line 355, ../scss/app.scss */
 .cys_text_overlay p {
   position: relative;
   top: 20px;
@@ -2247,6 +2251,11 @@ div#choose_your_story.move_down {
 }
 
 /* line 363, ../scss/app.scss */
+.header_transform .cys_text_overlay {
+  top: 0%;
+}
+
+/* line 368, ../scss/app.scss */
 .cys_he_container:hover:before {
   content: "";
   position: absolute;
@@ -2257,14 +2266,14 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 367, ../scss/app.scss */
+/* line 372, ../scss/app.scss */
 .cys_he_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
-/* line 374, ../scss/app.scss */
+/* line 379, ../scss/app.scss */
 .cys_she_container:hover:before {
   content: "";
   position: absolute;
@@ -2275,19 +2284,31 @@ div#choose_your_story.move_down {
   height: 100%;
   display: block;
 }
-/* line 377, ../scss/app.scss */
+/* line 382, ../scss/app.scss */
 .cys_she_container:hover .cys_text_overlay p {
   top: 0px;
   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
+/* line 388, ../scss/app.scss */
+.cys_side.header_transform.cys_she_container:before {
+  content: "";
+  position: absolute;
+  background: #cccccc;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 /*=== Flexslider ===*/
-/* line 387, ../scss/app.scss */
+/* line 396, ../scss/app.scss */
 .cys_split_container .flexslider {
   height: 100%;
 }
-/* line 391, ../scss/app.scss */
+/* line 400, ../scss/app.scss */
 .cys_split_container ul.slides {
   margin: 0px;
   left: 0;
@@ -2297,7 +2318,7 @@ div#choose_your_story.move_down {
   height: 100%;
   width: 100%;
 }
-/* line 400, ../scss/app.scss */
+/* line 409, ../scss/app.scss */
 .cys_split_container ul.slides li {
   background-size: cover !important;
   height: 100%;
